[project]
name = "clean-excel-file"
version = "1.0.0"
description = "Small project to clean excel files"
requires-python = ">=3.10"
dependencies = [
    "openpyxl>=3.1.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true 